# organizationDirectory

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  run.py
alembic/: env.py
alembic/versions/: a202680d1617_add_organization_building_and_activity_.py
scripts/: backend-start.sh  connection.py  initializer.py
src/client/interfaces/: __init__.py  storages.py
src/client/storages/: __init__.py  deps.py  session.py
src/common/constants/: __init__.py  deps.py  enums.py  error_codes.py
src/common/decorators/: __init__.py  logger.py  partial_schema.py
src/common/dependencies/: __init__.py  oauth_scheme.py
src/common/errors/: __init__.py  exeption.py
src/common/interfaces/: __init__.py  adapters.py  logger.py  utils.py
src/common/logger/: deps.py  logger.py
src/common/logger/constants/: __init__.py  deps.py  enums.py
src/common/models/: core.py
src/common/schemas/: __init__.py  core_schema.py  msg.py  pagination.py
src/common/utils/: __init__.py  custom_datetime.py  deps.py
src/config/docs/: __init__.py  app_description.py  deps.py  error_formatter.py  tags.py
src/config/interfaces/: __init__.py  docs.py
src/config/settings/: deps.py  postgres.py  project.py  settings.py
src/modules/activity/interfaces/: __init__.py  adapters.py  services.py
src/modules/activity/models/: __init__.py  activity.py
src/modules/activity/schemas/: activity.py
src/modules/activity/services/: __init__.py  activity.py  deps.py
src/modules/building/controllers/: __init__.py  building.py  deps.py
src/modules/building/filters/: building.py
src/modules/building/interfaces/: __init__.py  adapters.py  controllers.py  services.py  usecases.py
src/modules/building/models/: __init__.py  building.py
src/modules/building/schemas/: building.py
src/modules/building/services/: __init__.py  building.py  deps.py
src/modules/building/usecases/: __init__.py  building.py  deps.py
src/modules/organization/controllers/: __init__.py  deps.py  organization.py
src/modules/organization/interfaces/: __init__.py  adapters.py  controllers.py  services.py  usecases.py
src/modules/organization/models/: __init__.py  organization.py
src/server/constants/: __init__.py  consts.py
src/server/core/: __init__.py  app.py  controllers.py
src/server/interfaces/: __init__.py  middleware.py
src/server/middleware/: deps.py  exception.py  psql_context_manager.py
(+52 files in other folders)
